<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SerialQSteer</string>
    <string name="send">Send</string>
    <string name="band_a">バンドA</string>
    <string name="band_b">バンドB</string>
    <string name="band_c">バンドC</string>
    <string name="stop">□</string>
    <string name="forward">↑</string>
    <string name="back">↓</string>
    <string name="right_forward">↗</string>
    <string name="right">→</string>
    <string name="left_forward">↖</string>
    <string name="right_back">↘</string>
    <string name="left_back">↙</string>
    <string name="left">←</string>
</resources>
